--- a/paper3_manuscript.tex
+++ b/paper3_manuscript.tex
@@ -31,20 +31,20 @@
 \address{Research Institute of Intelligent Control and Systems, Harbin Institute of Technology, Harbin 150001, China}
 
 \begin{abstract}
-This paper proposes a dual terminal sliding mode control scheme for tracking tasks of rigid robotic manipulators. \textcolor{red}{As a signiﬁcant novelty, the presented design technique integates the individual sliding mode  surfaces to achieve the finite time convergence of tracking errors utilizing specially designed construct, and accordingly the convergence time is easily obtained due to the integral design. The underactuated issue and input limitation are specially considered in this paper, i.e., the underactuated issue is solved by introducing the hierarchical methodology into the basic dual sliding mode controller. The proposed method can easily combine with the adaptive technique to  eliminate the adverse effect caused by the input limitation in the rigious stability analysis.} These newly proposed methods also have the characteristics of nonsingularity and chattering suppression, and the effectiveness and high efficiency are verified by stabilizing the motions of the overhead crane and the tracking tasks of the rigid robotic manipulator. Simulation results validate the theoretical analyses about the proposed method.
+This paper proposes a dual terminal sliding mode control scheme for tracking tasks of rigid robotic manipulators. \textcolor{red}{As a signiﬁcant novelty, the presented design technique integrate the individual sliding mode  surfaces to achieve the finite time convergence of tracking errors utilizing specially designed construct, and accordingly the convergence time is easily obtained due to the integral design. The underactuated issue and input limitation are specially considered in this paper, i.e., the underactuated issue is solved by introducing the hierarchical methodology into the basic dual sliding mode controller. The proposed method can easily combine with the adaptive technique to  eliminate the adverse effect caused by the input limitation in the rigorous stability analysis.} These newly proposed methods also have the characteristics of nonsingularity and chattering suppression, and the effectiveness and high efficiency are verified by stabilizing the motions of the overhead crane and the tracking tasks of the rigid robotic manipulator. Simulation results validate the theoretical analyses about the proposed method.
 \end{abstract}
 \begin{keyword}
 Finite time control; Robotic manipulator control; Terminal sliding mode control; Input limitation; Stability analysis
 \end{keyword}
 \end{frontmatter}
 \section{Introduction}
-\textcolor{red}{Variable structure systems (VSS) are best known due to their insensitivity to parametric uncertainties~\cite{slotine1991applied}, and have been widely used in engineering applications, such as DC and DC converters~\cite{Tan2008General}, network control schemes~\cite{Hou2016}, aircrafts~\cite{Loza2015Sensor}, tethered satellite systems~\cite{Ma201667}, robotic manipulators~\cite{Beak2016A} and so on. As one important branch of the VSS, the sliding mode control (SMC) has become a popular solution to different kinds of control and signal process issues in recent years~\cite{zhao2015nonlinear,zhang2015attitude}. Meza-S{\'a}nchez et al. applied the second-order SMC scheme to a 3-DOF helicopter prototype based on the experimental test bed~\cite{meza2015output}. Zheng et al. implemented the SMC law to eliminate the bad effect of the input quantization in the coding and decoding process~\cite{zheng2016sliding}. Guzman et al. investigated the SMC application in a power factor rectifier with the constant switching frequency~\cite{guzman2016sliding}. Said et al. designed a robust adaptive sliding mode method to ensure the asymptotically stability of a boost converter~\cite{oucheriah2013pwm}. Roughly speaking, the SMC scheme is competent for normal scientific missions, due to its insensitivity to parameteric uncertainties and external disturbances, however, there still exist some obstacles, such as noncontinuous switching inputs in high frequency and low convergence speed of the tracking errors~\cite{boiko2013chattering,lee2009chattering}, preventing it from being utilized in some high-precision engineering applications~\cite{fridman2011sliding}.}
+\textcolor{red}{Variable structure systems (VSS) are best known due to their insensitivity to parametric uncertainties~\cite{slotine1991applied}, and have been widely used in engineering applications, such as DC and DC converters~\cite{Tan2008General}, network control schemes~\cite{Hou2016}, aircrafts~\cite{Loza2015Sensor}, tethered satellite systems~\cite{Ma201667}, robotic manipulators~\cite{Beak2016A} and so on. As one important branch of the VSS, the sliding mode control (SMC) has become a popular solution to different kinds of control and signal process issues in recent years~\cite{zhao2015nonlinear,zhang2015attitude}. Meza-S{\'a}nchez et al. applied the second-order SMC scheme to a 3-DOF helicopter prototype based on the experimental test bed~\cite{meza2015output}. Zheng et al. implemented the SMC law to eliminate the bad effect of the input quantization in the coding and decoding process~\cite{zheng2016sliding}. Guzman et al. investigated the SMC application in a power factor rectifier with the constant switching frequency~\cite{guzman2016sliding}. Said et al. designed a robust adaptive sliding mode method to ensure the asymptotically stability of a boost converter~\cite{oucheriah2013pwm}. Roughly speaking, the SMC scheme is competent for normal scientific missions, due to its insensitivity to parametric uncertainties and external disturbances, however, there still exist some obstacles, such as noncontinuous switching inputs in high frequency and low convergence speed of the tracking errors~\cite{boiko2013chattering,lee2009chattering}, preventing it from being utilized in some high-precision engineering applications~\cite{fridman2011sliding}.}
 
 \textcolor{red}{For alleviating the mentioned bad effects, many scientific researchers have presented remarkable achievements to promote the performance of SMC in last decade~\cite{zong2013quasi,santiesteban2013time,mu2015continuous,evangelista2013lyapunov,gonzalez2014chattering,dadras2012fractional,zhao2013output}. Among these methods, the high-order SMC and super-twisting SMC work well in reducing the chattering to generate continuous inputs~\cite{castillo2015higher,palosz2015laser,edwards2016adaptive,zhao2015finite,liu2015second}. Besides the issue on repressing the chattering, the fast convergence of the SMC scheme becomes a hot subject recently. The normal linear SMC completes the stabilization of the system dynamics in two steps. In the first step, the control inputs drive the system states onto the prescript sliding mode  surfaces, and this stage is also called the reaching phase. Then the sliding mode dynamics function to drive the system states to the origins along the ideal surfaces in the second step, which is usually known as the sliding phase. The reaching phase usually requires the states reach the ideal sliding mode surfaces in finite time, and suitably selected Lyapunov function and control parameters may accelerate this process; the sliding phase is related to the designed ideal sliding mode  surfaces closely, and trivial design techniques can guarantee the asymptotically stability of the reduced system~\cite{mu2016switching}. To achieve a fast convergence in the sliding phase, the terminal sliding mode (TSM) control is developed based on the finite time control theory~\cite{haimo1986finite,bhat1997finite}, and compared with the SMC design mentioned above, the most significant contributions of the TSM concept are introducing the finite time convergence to the sliding phase to complete the global finite time convergence~\cite{mu2016switching}. Moreover, the terminal SMC schemes have been utilized to achieve the high precise control, i.e., in~\cite{li2015robust}, an adaptive TSM controller regulated a $2$-link robotic manipulator to track the variable signals. Feng et al. stated a novel Lagrangian dynamic expression for the the rigid robot, and applied the global TSM control law to manipulate the robotic dynamics ~\cite{feng2002non}. In~\cite{kamal2016continuous}, Kamal addressed a continuous homogeneous sliding mode algorithm for a perturbed second-order plant, and the algorithm could be regarded as a combination of TSM and super-twisting sliding mode schemes.}
 
-\textcolor{red}{Notably, the conventional TSM surface design techniques are similar, since the surfaces are all designed for the single variable based on the finite time stability theory, in another words, only the individual variable and its derivative are concerned on by most designers~\cite{mu2016switching}. This nature makes the TSM controller become an individual control subsystem, which leads to the complicity of global convergence time in some extent. In this paper, an integral sliding mode  surface design technique breaks the barriers mentioned above, and the novel surface includes two designed variables to guarantee the integral finite time convergence. Moreover, nonsingularities of the TSM control scheme, chattering suppressions, underactuated applications and input limitations are also considered in the controller design.}
+\textcolor{red}{Notably, the conventional TSM surface design techniques are similar, since the surfaces are all designed for the single variable based on the finite time stability theory, in another words, only the individual variable and its derivative are concerned on by most designers~\cite{mu2016switching}. This nature makes the TSM controller become an individual control subsystem, which leads to the complicity of global convergence time in some extent. In this paper, an integral sliding mode  surface design technique breaks the barriers mentioned above, and the novel surface includes two designed variables to guarantee the integral finite time convergence. Moreover, nonsingularity of the TSM control scheme, chattering suppressions, underactuated applications and input limitations are also considered in the controller design.}
 
-\textcolor{red}{In this paper, the dual TSM (DTSM) control scheme is proposed for a class of second-order nonlinear systems with disturbances and uncertainties. The novel DTSM surface is exploited to achieve the finite time convergence, and the reaching and sliding times can both be calculated directly. For coping with the underacutated issue, cooperating with the hierarchical sliding mode  surface design methodology, we combine the hierarchical SMC scheme with the DTSM controller to develop a hierarchical dual TSM (HDTSM) control law to ensure the rigorous stability analyses. A modified DTSM (MDTSM) control scheme is presented to regulate the motion of the $n$-link robotic manipulators, and the case subjected to input limitations is also taken into consideration. The remained paper is organized as follows: Section~\ref{sec:2} introduces the DTSM controller, and the finite time convergences of the reaching and sliding phase are discussed. Furthermore, we provide the DTSM control scheme with extra design parameters to obtain the MDTSM controller, which performs better in theoretical analyses; for stabilizing underactuated systems, the HDTSM design is also developed in this section. In Section~\ref{sec:3}, the MDTSM control law is applied to the motion control system of the $n$-link robotic  manipulator, and the stability analyses are also carried out. Section~\ref{sec:4} exhibits the simulation results, and finally the conclusion is assigned in Section~\ref{sec:5}.}
+\textcolor{red}{In this paper, the dual TSM (DTSM) control scheme is proposed for a class of second-order nonlinear systems with disturbances and uncertainties. The novel DTSM surface is exploited to achieve the finite time convergence, and the reaching and sliding times can both be calculated directly. For coping with the underacutated issue, cooperating with the hierarchical sliding mode  surface design methodology, we combine the hierarchical SMC scheme with the DTSM controller to develop a hierarchical dual TSM (HDTSM) control law to ensure the rigorous stability analyses. A modified DTSM (MDTSM) control scheme is presented to regulate the motion of the $n$-link robotic manipulators, and the case subjected to input limitations is also taken into consideration. The remained paper is organized as follows: Section~\ref{sec:2} introduces the DTSM controller, and the finite time convergence is discussed. Furthermore, we provide the DTSM control scheme with extra design parameters to obtain the MDTSM controller, which performs better in theoretical analyses; for stabilizing underactuated systems, the HDTSM controller design is also developed in this section. In Section~\ref{sec:3}, the MDTSM control law is applied to the motion control system of the $n$-link robotic  manipulator, and the stability analyses are also carried out. Section~\ref{sec:4} exhibits the simulation results, and finally the conclusion is assigned in Section~\ref{sec:5}.}
 \section{Dual terminal SMC}\label{sec:2}
 Consider a nominal second-order nonlinear system:
 \begin{align}
@@ -181,7 +181,7 @@ t_f = \underbrace{t_0+\frac{\sqrt{2}V^{\frac{1}{2}}(t_0)}{\min(\eta_1,\eta_2)}}_
 \begin{proof}
 The proof is similar to Theorem \ref{theorem:1}, hence it's omitted here.
 \end{proof}
-In the MDTSM control scheme, the performances of the reaching and sliding phases can benefit from suitably selected $\lambda$ and $\gamma$ analytically. The establishment of $V(t_0)$ is depended on $\lambda$, if the state $\bm x(t_0)$ has been fixed. Exactly, $\lambda$ affects the reaching distance between $V(t_0)$ and $V(t_r)$, and normally $V(t_r)$ stands for the reaching status at $t_r$, namely, $V=\bm s^T\bm s = \bm 0,\forall t\ge t_r$. $\eta$ is definied as the reaching speed, because a suitable $\eta$ can adjust the reaching time as desired in some extent. Hence, $\lambda$ cooperates with $\eta$ to manage the reaching phase dynamics, and similarly the parameter $\gamma$ determine the convergent speed of the sliding phase dynamics.
+In the MDTSM control scheme, the performances of the reaching and sliding phases can benefit from suitably selected $\lambda$ and $\gamma$ analytically. The establishment of $V(t_0)$ is depended on $\lambda$, if the state $\bm x(t_0)$ has been fixed. Exactly, $\lambda$ affects the reaching distance between $V(t_0)$ and $V(t_r)$, and normally $V(t_r)$ stands for the reaching status at $t_r$, namely, $V=\bm s^T\bm s = \bm 0,\forall t\ge t_r$. $\eta$ is defined as the reaching speed, because a suitable $\eta$ can adjust the reaching time as desired in some extent. Hence, $\lambda$ cooperates with $\eta$ to manage the reaching phase dynamics, and similarly the parameter $\gamma$ determine the convergent speed of the sliding phase dynamics.
 \begin{myrem}
 For the proposed designs, the parameter $\gamma$ may be defined as different scalars $\gamma_1$ and $\gamma_2$ for $u_1$ and $u_2$ respectively, such that one can produce the total convergence time as:
 \begin{align}
@@ -190,7 +190,7 @@ t_f = \underbrace{t_0+\frac{\sqrt{2}V^{\frac{1}{2}}(t_0)}{\min(\eta_1,\eta_2)}}_
 \end{myrem}
 \subsection{Nonsingular MDTSM controller design}
 
-The finite time convergences of the DTSM and MDTSM controllers have been verified clearly, but similar to the conventional TSM control scheme, there exists another obstacle in the design mentioned above, i.e., the issue of the singularity in control inputs. Essentially, the singularity occurs in Eq.~(\ref{eq:modified input}) when $x_1=0$ but $x_2\neq 0$ in $u_1$ (the phenomena happens to $u_2$ under the same condition). To cope with the singularity, the nonsingular MDTSM control scheme is presented after introducing an analytical technique into the MDTSM controller based on the following lemma~\cite{feng2013nonsingular}.
+The finite time convergence of the MDTSM controller has been verified clearly, but similar to the conventional TSM control scheme, there exists another obstacle in the design mentioned above, i.e., the issue of the singularity in control inputs. Essentially, the singularity occurs in Eq.~(\ref{eq:modified input}) when $x_1=0$ but $x_2\neq 0$ in $u_1$ (the phenomena happens to $u_2$ under the same condition). To cope with the singularity, the nonsingular MDTSM control scheme is presented after introducing the analytical technique into the MDTSM controller based on the following lemma~\cite{feng2013nonsingular}.
 \begin{mylem}\label{lemma:3}
 Considering the second-order system (\ref{eq:second-order system}), the TSM surfaces are designed as:
 \begin{align*}
@@ -240,7 +240,7 @@ Besides singularity issue, in practice, the control input can not be very large 
 \dot x_4 &= f_2(\bm x,t)+g_2(\bm x,t)+b_2(\bm x,t)f_b(u_2),\label{eq:second-order system subjected to limitation}
 \end{split}
 \end{align}
-whree $f_b(u) = R(u)u$ is a bounded function, which owns the properties as follows:
+where $f_b(u) = R(u)u$ is a bounded function, which owns the properties as follows:
 \begin{align}\begin{split}
   R(u)=\begin{cases}
   u_{max}/u &u>u_{max}\\
@@ -280,12 +280,12 @@ and hence we can proceed to obtain the derivative of the Lyapunov function
 &\quad + \varpi_1\nu_1(\omega_1-1)\vert s_1\vert+\varpi_2\nu_2(\omega_2-1)\vert s_2\vert\\
 &\le -\varpi_1(\nu_1-1)\vert s_1\vert-\varpi_2(\nu_2-1)\vert s_2\vert\le 0\label{V linmitation}
 \end{split}\end{align}
-$\dot V$ is therefore negative semi-deﬁnite while $V_1$ is positive deﬁnite. Since  $s_i$ is bounded according to assumption~\ref{myas:1}, we can have $\lim_{t\to\infty}V<\infty$ and proceed to deduce the integration of inequality~(\ref{V linmitation}) to obtain following results
+$\dot V$ is therefore negative semi-definite while $V_1$ is positive definite. Since  $s_i$ is bounded according to assumption~\ref{myas:1}, we can have $\lim_{t\to\infty}V<\infty$ and proceed to deduce the integration of inequality~(\ref{V linmitation}) to obtain following results
 \begin{align}\begin{split}
 V(0)&\ge V(t)+\int_0^t(\nu_1-1)\varpi_1\vert s_1(\varsigma)\vert+(\nu_2-1)\varpi_2\vert s_2(\varsigma)\vert d\varsigma\\
 &\ge\int_0^t(\nu_1-1)\varpi_1\vert s_1(\varsigma)\vert+(\nu_2-1)\varpi_2\vert s_2(\varsigma)\vert d\varsigma.
 \end{split}\end{align}
-Hence we can conclude that the sliding dynamics are asymptotically stable in the light of Barbalat’s lemmas. Here the proof completes, and the system states can converge to origins by referring to the analyses in Theorem~\ref{theorem:1}.
+Hence we can conclude that the sliding dynamics are asymptotically stable in the light of Barbalat lemma. Here the proof completes, and the system states can converge to origins by referring to the analyses in Theorem~\ref{theorem:1}.
 \end{proof}
 }
 \subsection{MDTSM controller design for underactuated systems}
@@ -454,10 +454,10 @@ Considering the situation that $n$ is an odd number, the $n$-link manipulator as
 The singularity of the MDTSM controller for the robotic manipulator can be removed by using the technique introduced in Theorem \ref{theorem:3}.
 \end{myrem}
 \begin{myrem}
-One can also use the term $x^{a/b}$ instead of $sgn^\alpha(x)$ in the DTSM control mentioned above, where $a$ and $b$ are odd numbers with $0<a/b<1$, as the entire proof maintains available theoretically. For handling the chattering, the $sign(x)$ can be replaced with $sat(x,\delta)$, and the boundedness thickness can be selected as $\delta=1\times 10^{-4}$. \textcolor{red}{Incorporating the adaptive MDTSM technique, the manipulator dynamics subjected to the input limitation can also been stabilized as desired.}
+One can also use the term $x^{a/b}$ instead of $sgn^\alpha(x)$ in the DTSM control mentioned above, where $a$ and $b$ are odd numbers with $0<a/b<1$, as the entire proof maintains available theoretically. For handling the chattering, the $sign(x)$ can be replaced with $sat(x,\delta)$, and the boundary layer thickness can be selected as $\delta=1\times 10^{-4}$. \textcolor{red}{Incorporating the adaptive MDTSM technique, the manipulator dynamics subjected to the input limitation can also been stabilized as desired.}
 \end{myrem}
 \section{Simulation studies}\label{sec:4}
-In this section, three simulations will be presented, namely, a verification on the effectiveness of the DTSM and MDTSM controllers, an underactuated example and the robotic manipulator stabilization, to evaluate the performance of the proposed control schemes.
+In this section, three simulations will be presented, namely, the verification on the effectiveness of the DTSM and MDTSM controllers, the underactuated example and the robotic manipulator stabilization, to evaluate the performance of the proposed control schemes.
 \subsection{Effectiveness study}
 For verifying the effectiveness of the proposed control scheme, consider the following second-order system with the external disturbances:
 \begin{align}
@@ -476,7 +476,7 @@ It's obvious that the disturbances in the system~(\ref{eq:simulation second-orde
 and hence, based on the analyses in Theorem~\ref{theorem:1}, let $l_1>0.1$ and $l_2>0.8$ guarantee the reaching condition of the desired sliding mode  surface. Also, the inputs $u_1$ and $u_2$ can be viewed as virtual input terms which consist of the linear combination of the crucial inputs in system, i.e., for the system~(\ref{eq:simulation second-order system}), the input terms can be expressed by $\bm u = \Xi\bm\tau$ particularly, where $\bm u\in R^2$ is the virtual input vector; $\bm \tau\in R^2$ stands for the crucial input vector; $\Xi\in R^{2\times 2}$ must have full rank.\par
 The system is supposed to be conducted to the desired condition $\bm x_d=(0,0,0,0)$ from a prescript condition $\bm x_0=(1.2,1.2,1.2,1.2)$. Admittedly, this prescript condition leads to a lager initial reaching distance due to the existence of the cubic terms $\gamma x^3$ in the sliding mode  surface, therefore a large reaching speed $k$ is required correspondingly. The control parameters are chosen as: $\alpha = 0.6$, $\lambda = 0.5$, $\gamma = 3$ and $k = 20$. Besides the large reaching speed selected, $\gamma$ accelerates the convergence in the sliding phase indirectly. Therefore the design of the MDTSM controller for the system~(\ref{eq:simulation second-order system}) is finished, and the corresponding simulation results are illustrated from Figure~\ref{Figure:2} to Figure~\ref{Figure:3}.
 
-From Figure~\ref{Figure:2}, it's apparent that all the states converge to zero as desired. \textcolor{red}{For the nominal system~(\ref{eq:simulation second-order system}) handled by utilizing the MDTSM controller, accrording to Eq.~(\ref{eq:total convergence time}) and simulation datas, we can calculate the maximum theoretical finite convergence time $t_f=5.2609s$ directly. The system states, in other words, can be stable in no more than $5.2609s$ theoretically. However, the system response results in Figure~\ref{Figure:2_20161108} indicate that all the states have been stable after about $1.5s$, which is far less than $t_f$. Hence, from the view of the convergence time, the simulation results are in accordance with the theoretical analyses.} Figure~\ref{Figure:3} demonstrates the inputs, the amplitudes of which are closely related to $\eta$, for the purpose of avoiding the large chattering, the boundary layer technique is adopted. Although the states have been driven to the origin and stay there in subsequent time, one can find that the inputs don't maintain constant but fluctuate in a certain range. The nature of the situation mentioned above means that the fluctuating inputs compensate the error caused by the disturbance.\par
+From Figure~\ref{Figure:2}, it's apparent that all the states converge to zero as desired. \textcolor{red}{For the nominal system~(\ref{eq:simulation second-order system}) handled by utilizing the MDTSM controller, according to Eq.~(\ref{eq:total convergence time}) and simulation data, we can calculate the maximum theoretical finite convergence time $t_f=5.2609s$ directly. The system states, in other words, can be stable in no more than $5.2609s$ theoretically. However, the system response results in Figure~\ref{Figure:2_20161108} indicate that all the states have been stable after about $1.5s$, which is far less than $t_f$. Hence, from the view of the convergence time, the simulation results are in accordance with the theoretical analyses.} Figure~\ref{Figure:3} demonstrates the inputs, the amplitudes of which are closely related to $\eta$, for the purpose of avoiding the large chattering, the boundary layer technique is adopted. Although the states have been driven to the origin and stay there in subsequent time, one can find that the inputs don't maintain constant but fluctuate in a certain range. The nature of the situation mentioned above means that the fluctuating inputs compensate the error caused by the disturbance.\par
 At this point, some effectiveness of the proposed MDTSM control scheme has been verified, and in Section \ref{sec:robotica manipulator}, we will apply it to stabilize the behavior of a $2$-link robotic manipulator directly.
 \begin{figure}
 \centering
@@ -584,7 +584,7 @@ This section will give a set of simulation to examine the step response performa
 \end{align}
 where the main control parameters of which are selected as $\alpha = 0.6$, $\gamma = 5$ and $k = 150$ to get a fairly good control performance.
 
-The performance of the controllers mentioned above is illustrated in Figure~\ref{Figure:4} and Figure~\ref{Figure:5}. \textcolor{red}{For the MDTSM controller, the jiont~1 finishes its desired behaviour at about $2.3s$, and meanwhile the joint~2 spends about $1.7s$ completing the desired mission. Also, by observing the results, we can find that the stabilization time of the proposed method is less than the TSM controller's, and the regulating process of the manipulators is steady and reasonable. We can calculate the maximum theoretical finite convergence time $t_f=3.0843s$, which can be obtained directly accoring to Eq.~(\ref{eq:total convergence time}) and simulation datas, is more than $2.3s$, the convergence time of the simulation result. Hence, we can conclude that the results have verified the analyses about the convergence time in Section~\ref{sec:2}.  The control torques of the joints are depicted in Figure~\ref{Figure:torque}. It is obvious that the torques of the two jionts are both switching dramatically at the beginning, and this phenomenon is caused directly by the rapidly changing sliding mode dynamics $s_i$. Moreover, at about $1.7s$, all the joint states are regulated to locate in the vicinity of the origin, but the sliding mode dynamics do not yet enter the boundary layer $s_i< \delta$. This switching inputs last about $2.7s$ before reaching the boundary layer. After $2.7s$ boundary layer technique works to generate continuous torques, which maintain a reasonable constant in the subsequent time, since the overall system have been stable.} Therefore these results show that the MDTSM control scheme can achieve the regulation of the manipulator effectively.
+The performance of the controllers mentioned above is illustrated in Figure~\ref{Figure:4} and Figure~\ref{Figure:5}. \textcolor{red}{For the MDTSM controller, the joint~1 finishes its desired behaviour at about $2.3s$, and meanwhile the joint~2 spends about $1.7s$ completing the desired mission. Also, by observing the results, we can find that the stabilization time of the proposed method is less than the TSM controller's, and the regulating process of the manipulators is steady and reasonable. We can calculate the maximum theoretical finite convergence time $t_f=3.0843s$, which can be obtained directly according to Eq.~(\ref{eq:total convergence time}) and simulation data, is more than $2.3s$, the convergence time of the simulation result. Hence, we can conclude that the results have verified the analyses about the convergence time in Section~\ref{sec:2}.  The control torques of the joints are depicted in Figure~\ref{Figure:torque}. It is obvious that the torques of the two joints are both switching dramatically at the beginning, and this phenomenon is caused directly by the rapidly changing sliding mode dynamics $s_i$. Moreover, at about $1.7s$, all the joint states are regulated to locate in the vicinity of the origin, but the sliding mode dynamics do not yet enter the boundary layer $s_i< \delta$. This switching inputs last about $2.7s$ before reaching the boundary layer. After $2.7s$ boundary layer technique works to generate continuous torques, which maintain a reasonable constant in the subsequent time, since the overall system have been stable.} Therefore these results show that the MDTSM control scheme can achieve the regulation of the manipulator effectively.
 \begin{figure}
 \centering
 \includegraphics[width=0.7\textwidth]{paper3_fig4.eps}
@@ -606,7 +606,7 @@ The performance of the controllers mentioned above is illustrated in Figure~\ref
 \label{Figure:torque}
 \end{figure}
 
-\textcolor{red}{At this point, we have verifed the feasibility of the MDTSM controller on step responses of the joints of the manipulator, and in mostly engineering applications, manipulators are required to track the variable desied signals, which own the actual physical meanings, such as polish, machine tools and laser beam cutting. Accordingly, the tracking performance of the robotic manipulator controlled by the proposed methods is studied in this section, and we continue to use the parameters of the controller mentioned above, and the mission condition is changed as follows:}
+\textcolor{red}{At this point, we have verified the feasibility of the MDTSM controller on step responses of the joints of the manipulator, and in mostly engineering applications, manipulators are required to track the variable desired signals, which own the actual physical meanings, such as polish, machine tools and laser beam cutting. Accordingly, the tracking performance of the robotic manipulator controlled by the proposed methods is studied in this section, and we continue to use the parameters of the controller mentioned above, and the mission condition is changed as follows:}
 \begin{align*}
 &(\bm q_0^T, \dot{\bm q}_0^T)= (1.5,1.5,0,0)\\
 &{\bm q}_d^T=(1.25-(1/5)e^{-t}+(1/20)e^{-4t},1.25+(9/40)e^{-t}-(1/4)e^{-2t})
@@ -629,7 +629,7 @@ The performance of the controllers mentioned above is illustrated in Figure~\ref
 
 \textcolor{red}{Here we examine the step response of the adaptive MDTSM control scheme for the robotic manipulator dynamics, since the step response is a severe challenge to the controller. Accordingly, the initial and desired conditions are $(\bm q_0^T, \dot{\bm q}_0^T)= (0.3,0.2,0,0)$ and $({\bm q}_d^T,\dot{\bm q}_d^T)=(1,1,0,0)$, respectively. The design parameters of the adaptive MDTSM controller can be selected as $\varpi_1=50$, $\varpi_2=30$, $\varphi_1=\varphi_2=0.01$, $\nu_1 = 5$, $\nu_2=6$, $\omega_1=\omega_2=1$ to satisfy the parameter conditions in Theorem~\ref{thm:4}. In addition, for better tracking performance, the boundary layer thickness is revised as $\delta=0.1$. }
 
-\textcolor{red}{The results shown in Figure~\ref{Figure:limitation_torque} indicate that the joint torques are limited in the region $[-50,50]Nm$ from $0s$ to $0.4s$, while the trajectories in the Figure~\ref{Figure:limitation_q} demonstrates that the manipulator dynamics are still under control. The limitations occur in the beginning stage of the regulation, since the great tracking errors leads to the great command inputs. Moveover the boundary layer technique works after $0.4$ and generates continuous torques in the subsequent time. Compared to the results in Figure~\ref{Figure:torque}, we can find detect that the boundary layer of the adaptive MDTSM controller functions earlier, and this is because that the thickness is modified as $\delta=1\times 10^{-1}$ from $\delta=1\times 10^{-4}$. It implies that $s_i<\delta$ appears earlier for the adaptive MDTSM controller than the MDTSM controller. Also, compared to the results from Figure~\ref{Figure:4}, we can find that the rise time of the adaptive MDTSM controller is less, although the torques are limited strictly. Hence, we can conclude that the proposed adaptive MDTSM controller can regulate the robotic manipulator subjectd to the input limitation, and the control performance is even better than the MDTSM controller for the system without input limitation in some extent.}
+\textcolor{red}{The results shown in Figure~\ref{Figure:limitation_torque} indicate that the joint torques are limited in the region $[-50,50]Nm$ from $0s$ to $0.4s$, while the trajectories in the Figure~\ref{Figure:limitation_q} demonstrates that the manipulator dynamics are still under control. The limitations occur in the beginning stage of the regulation, since the great tracking errors leads to the great command inputs. Moveover the boundary layer technique works after $0.4s$ and generates continuous torques in the subsequent time. Compared to the results in Figure~\ref{Figure:torque}, we can find detect that the boundary layer of the adaptive MDTSM controller functions earlier, and this is because that the thickness is modified as $\delta=1\times 10^{-1}$ from $\delta=1\times 10^{-4}$. It implies that $s_i<\delta$ appears earlier for the adaptive MDTSM controller than the MDTSM controller. Also, compared to the results from Figure~\ref{Figure:4}, we can find that the rise time of the adaptive MDTSM controller is less, although the torques are limited strictly. Hence, we can conclude that the proposed adaptive MDTSM controller can regulate the robotic manipulator subjected to the input limitation, and the control performance is even better than the MDTSM controller for the system without input limitation in some extent.}
 \begin{figure}
 \centering
 \includegraphics[width=0.7\textwidth]{paper3_fig_limitation_q.eps}
