--- a/paper3_manuscript.tex
+++ b/paper3_manuscript.tex
@@ -40,11 +40,11 @@ Finite time control; Robotic manipulator control; Terminal sliding mode control;
 \section{Introduction}
 \textcolor{red}{Variable structure systems (VSS) are best known due to their insensitivity to parametric uncertainties~\cite{slotine1991applied}, and have been widely used in engineering applications, such as DC and DC converters~\cite{Tan2008General}, network control schemes~\cite{Hou2016}, aircrafts~\cite{Loza2015Sensor}, tethered satellite systems~\cite{Ma201667}, robotic manipulators~\cite{Beak2016A} and so on. As one important branch of the VSS, the sliding mode control (SMC) has become a popular solution to different kinds of control and signal process issues in recent years~\cite{zhao2015nonlinear,zhang2015attitude}. Meza-S{\'a}nchez et al. applied the second-order SMC scheme to a 3-DOF helicopter prototype based on the experimental test bed~\cite{meza2015output}. Zheng et al. implemented the SMC law to eliminate the bad effect of the input quantization in the coding and decoding process~\cite{zheng2016sliding}. Guzman et al. investigated the SMC application in a power factor rectifier with the constant switching frequency~\cite{guzman2016sliding}. Said et al. designed a robust adaptive sliding mode method to ensure the asymptotically stability of a boost converter~\cite{oucheriah2013pwm}. Roughly speaking, the SMC scheme is competent for normal scientific missions, due to its insensitivity to parametric uncertainties and external disturbances, however, there still exist some obstacles, such as noncontinuous switching inputs in high frequency and low convergence speed of the tracking errors~\cite{boiko2013chattering,lee2009chattering}, preventing it from being utilized in some high-precision engineering applications~\cite{fridman2011sliding}.}
 
-\textcolor{red}{For alleviating the mentioned bad effects, many scientific researchers have presented remarkable achievements to promote the performance of SMC in last decade~\cite{zong2013quasi,santiesteban2013time,mu2015continuous,evangelista2013lyapunov,gonzalez2014chattering,dadras2012fractional,zhao2013output}. Among these methods, the high-order SMC and super-twisting SMC work well in reducing the chattering to generate continuous inputs~\cite{castillo2015higher,palosz2015laser,edwards2016adaptive,zhao2015finite,liu2015second}. Besides the issue on repressing the chattering, the fast convergence of the SMC scheme becomes a hot subject recently. The normal linear SMC completes the stabilization of the system dynamics in two steps. In the first step, the control inputs drive the system states onto the prescript sliding mode  surfaces, and this stage is also called the reaching phase. Then the sliding mode dynamics function to drive the system states to the origins along the ideal surfaces in the second step, which is usually known as the sliding phase. The reaching phase usually requires the states to reach the ideal sliding mode surfaces in finite time, and suitably selected Lyapunov function and control parameters may accelerate this process; the sliding phase is related to the designed ideal sliding mode  surfaces closely, and trivial design techniques can guarantee the asymptotically stability of the reduced system~\cite{mu2016switching}. To achieve a fast convergence in the sliding phase, the terminal sliding mode (TSM) control is developed based on the finite time control theory~\cite{haimo1986finite,bhat1997finite}, and compared with the SMC design mentioned above, the most significant contributions of the TSM concept are introducing the finite time convergence to the sliding phase to complete the global finite time convergence~\cite{mu2016switching}. Moreover, the terminal SMC schemes have been utilized to achieve the high precise control, i.e., in~\cite{li2015robust}, an adaptive TSM controller regulated a $2$-link robotic manipulator to track the variable signals. Feng et al. stated a novel Lagrangian dynamic expression for the the rigid robot, and applied the global TSM control law to manipulate the robotic dynamics ~\cite{feng2002non}. In~\cite{kamal2016continuous}, Kamal addressed a continuous homogeneous sliding mode algorithm for a perturbed second-order plant, and the algorithm could be regarded as a combination of TSM and super-twisting sliding mode schemes.}
+\textcolor{red}{For alleviating the mentioned bad effects, many scientific researchers have presented remarkable achievements to promote the performance of SMC in last decade~\cite{zong2013quasi,santiesteban2013time,mu2015continuous,evangelista2013lyapunov,gonzalez2014chattering,dadras2012fractional,zhao2013output}. Among these methods, the high-order SMC and super-twisting SMC work well in reducing the chattering to generate continuous inputs~\cite{castillo2015higher,palosz2015laser,edwards2016adaptive,zhao2015finite,liu2015second}. Besides the issue on repressing the chattering, the fast convergence of the SMC scheme becomes a hot subject recently. The normal linear SMC completes the stabilization of the system dynamics in two steps. In the first step, the control inputs drive the system states onto the prescript sliding mode  surfaces, and this stage is also called the reaching phase. Then the sliding mode dynamics function to drive the system states to the origins along the ideal surfaces in the second step, which is usually known as the sliding phase. The reaching phase usually requires the states to reach the ideal sliding mode surfaces in finite time, and suitably selected Lyapunov function and control parameters may accelerate this process; the sliding phase is associated with the designed ideal sliding mode  surfaces closely, and trivial design techniques can guarantee the asymptotically stability of the reduced system~\cite{mu2016switching}. To achieve a fast convergence in the sliding phase, the terminal sliding mode (TSM) control is developed based on the finite time control theory~\cite{haimo1986finite,bhat1997finite}, and compared with the SMC design mentioned above, the most significant contributions of the TSM concept are introducing the finite time convergence to the sliding phase to complete the global finite time convergence~\cite{mu2016switching}. Moreover, the terminal SMC schemes have been utilized to achieve the high precise control, i.e., in~\cite{li2015robust}, an adaptive TSM controller regulated a $2$-link robotic manipulator to track the variable signals. Feng et al. stated a novel Lagrangian dynamic expression for the rigid robot, and applied the global TSM control law to manipulate the robotic dynamics ~\cite{feng2002non}. In~\cite{kamal2016continuous}, Kamal addressed a continuous homogeneous sliding mode algorithm for a perturbed second-order plant, and the algorithm could be regarded as a combination of TSM and super-twisting sliding mode schemes.}
 
 \textcolor{red}{Notably, the conventional TSM surface design techniques are similar, since the surfaces are all designed for the single variable based on the finite time stability theory, in other words, only the individual variable and its derivative are concerned on by most designers~\cite{mu2016switching}. This nature makes the TSM controller become an individual control subsystem, which leads to the complicity of global convergence time in some extent. In this paper, an integral sliding mode  surface design technique breaks the barriers mentioned above, and the novel surface includes two designed variables to guarantee the integral finite time convergence. Moreover, nonsingularity of the TSM control scheme, chattering suppressions, underactuated applications and input limitations are also considered in the controller design.}
 
-\textcolor{red}{In this paper, the dual TSM (DTSM) control scheme is proposed for a class of second-order nonlinear systems with disturbances and uncertainties. The novel DTSM surface is exploited to achieve the finite time convergence, and the reaching and sliding times can both be calculated directly. For coping with the underacutated issue, cooperating with the hierarchical sliding mode  surface design methodology, we combine the hierarchical SMC scheme with the DTSM controller to develop a hierarchical dual TSM (HDTSM) control law to ensure the rigorous stability analyses. A modified DTSM (MDTSM) control scheme is presented to regulate the motion of the $n$-link robotic manipulators, and the case subjected to input limitations is also taken into consideration. The remained paper is organized as follows: Section~\ref{sec:2} introduces the DTSM controller, and the finite time convergence is discussed. Furthermore, we provide the DTSM control scheme with extra design parameters to obtain the MDTSM controller, which performs better in theoretical analyses; for stabilizing underactuated systems, the HDTSM controller design is also developed in this section. In Section~\ref{sec:3}, the MDTSM control law is applied to the motion control system of the $n$-link robotic  manipulator, and the stability analyses are also carried out. Section~\ref{sec:4} exhibits the simulation results, and finally the conclusion is assigned in Section~\ref{sec:5}.}
+\textcolor{red}{In this paper, the dual TSM (DTSM) control scheme is proposed for a class of second-order nonlinear systems with disturbances and uncertainties. The novel DTSM surface is exploited to achieve the finite time convergence, and the reaching and sliding times can both be calculated directly. For coping with the underactuated issue, cooperating with the hierarchical sliding mode  surface design methodology, we combine the hierarchical SMC scheme with the DTSM controller to develop a hierarchical dual TSM (HDTSM) control law to ensure the rigorous stability analyses. A modified DTSM (MDTSM) control scheme is presented to regulate the motion of the $n$-link robotic manipulators, and the case subjected to input limitations is also taken into consideration. The remained paper is organized as follows: Section~\ref{sec:2} introduces the DTSM controller, and the finite time convergence is discussed. Furthermore, we provide the DTSM control scheme with extra design parameters to obtain the MDTSM controller, which performs better in theoretical analyses; for stabilizing underactuated systems, the HDTSM controller design is also developed in this section. In Section~\ref{sec:3}, the MDTSM control law is applied to the motion control system of the $n$-link robotic  manipulator, and the stability analyses are also carried out. Section~\ref{sec:4} exhibits the simulation results, and finally the conclusion is assigned in Section~\ref{sec:5}.}
 \section{Dual terminal SMC}\label{sec:2}
 Consider a nominal second-order nonlinear system:
 \begin{align}
@@ -103,7 +103,7 @@ the convergence time of which is
 t_s\le t_0+\frac{(2V(t_0))^{\frac{1-\alpha}{2}}}{d(1-\alpha)}.
 \end{align}\label{lemma:2}
 \end{mylem}
-\textcolor{red}{For stabilization of the second-order system shown as~Eq.~(\ref{eq:second-order system}), DTSM control inputs are stated according the following theorem.}
+\textcolor{red}{For stabilization of the second-order system shown as Eq.~(\ref{eq:second-order system}), DTSM control inputs are stated according the following theorem.}
 \begin{mythm}\label{theorem:1}DTSM Controller Design. The states of the system~(\ref{eq:second-order system}) will converge to origins along the surface $\bm s=0$ in finite time, if the inputs are designed as
 \begin{align}
 \begin{split}
@@ -135,7 +135,7 @@ Consider the Lyapunov function $V=\frac{1}{2}{\bm s}^T\bm s$, which has
 &\quad +s_2(f_2(\bm x)+g_2(\bm x)+b_2(\bm x)u_2+\alpha\vert x_3\vert^{\alpha-1}x_4+3x_3^2x_4+x_2).\label{eq:V_1}
 \end{split}
 \end{align}
-Substituting inputs (\ref{eq:DSM input}) in~Eq.~(\ref{eq:V_1}) yields
+Substituting inputs (\ref{eq:DSM input}) in Eq.~(\ref{eq:V_1}) yields
 \begin{align*}
 \dot V &= s_1(-k_1sgn(s_1)+g_1(\bm x))+s_2(-k_2sgn(s_2)+g_2(\bm x))\\
 &= -\eta_1s_1sgn(s_1)-\eta_2s_2sgn(s_2)+(g_1(\bm x)s_1 - l_1s_1sgn(s_1))+(g_2(\bm x)s_2 - l_2s_2sgn(s_2))\\
@@ -476,7 +476,7 @@ It's obvious that the disturbances in the system~(\ref{eq:simulation second-orde
 and hence, based on the analyses in Theorem~\ref{theorem:1}, let $l_1>0.1$ and $l_2>0.8$ guarantee the reaching condition of the desired sliding mode  surface. Also, the inputs $u_1$ and $u_2$ can be viewed as virtual input terms which consist of the linear combination of the crucial inputs in system, i.e., for the system~(\ref{eq:simulation second-order system}), the input terms can be expressed by $\bm u = \Xi\bm\tau$ particularly, where $\bm u\in R^2$ is the virtual input vector; $\bm \tau\in R^2$ stands for the crucial input vector; $\Xi\in R^{2\times 2}$ must have full rank.\par
 The system is supposed to be controlled to the desired condition $\bm x_d=(0,0,0,0)$ from a prescript condition $\bm x_0=(1.2,1.2,1.2,1.2)$. Admittedly, this prescript condition leads to a large initial reaching distance due to the existence of the cubic terms $\gamma x^3$ in the sliding mode  surface, therefore a large reaching speed $k$ is required correspondingly. The control parameters are chosen as: $\alpha = 0.6$, $\lambda = 0.5$, $\gamma = 3$ and $k = 20$. Besides the large reaching speed selected, $\gamma$ accelerates the convergence in the sliding phase indirectly. Therefore the design of the MDTSM controller for the system~(\ref{eq:simulation second-order system}) is finished, and the corresponding simulation results are illustrated from Figure~\ref{Figure:2} to Figure~\ref{Figure:3}.
 
-From Figure~\ref{Figure:2}, it's apparent that all the states converge to zero as desired. \textcolor{red}{For the nominal system~(\ref{eq:simulation second-order system}) handled by utilizing the MDTSM controller, according to Eq.~(\ref{eq:total convergence time}) and simulation data, we can calculate the maximum theoretical finite convergence time $t_f=5.2609s$ directly. The system states, in other words, can be stable in no more than $5.2609s$ theoretically. However, the system response results in Figure~\ref{Figure:2_20161108} indicate that all the states have been stable after about $1.5s$, which is far less than $t_f$. Hence, from the view of the convergence time, the simulation results are in accordance with the theoretical analyses.} Figure~\ref{Figure:3} demonstrates the inputs, the amplitudes of which are closely related to $\eta$, for the purpose of avoiding the large chattering, the boundary layer technique is adopted. Although the states have been driven to the origin and stay there in subsequent time, one can find that the inputs don't maintain constant but fluctuate in a certain range. The nature of the situation mentioned above means that the fluctuating inputs compensate the error caused by the disturbance.\par
+From Figure~\ref{Figure:2}, it's apparent that all the states converge to zero as desired. \textcolor{red}{For the nominal system~(\ref{eq:simulation second-order system}) handled by utilizing the MDTSM controller, according to Eq.~(\ref{eq:total convergence time}) and simulation data, we can calculate the maximum theoretical finite convergence time $t_f=5.2609s$ directly. The system states, in other words, can be stable in no more than $5.2609s$ theoretically. However, the system response results in Figure~\ref{Figure:2_20161108} indicate that all the states have been stable after about $1.5s$, which is far less than $t_f$. Hence, from the view of the convergence time, the simulation results are in accordance with the theoretical analyses.} Figure~\ref{Figure:3} demonstrates the inputs, the amplitudes of which are closely associated with $\eta$, for the purpose of avoiding the large chattering, the boundary layer technique is adopted. Although the states have been driven to the origin and stay there in subsequent time, one can find that the inputs don't maintain constant but fluctuate in a certain range. The nature of the situation mentioned above means that the fluctuating inputs compensate the error caused by the disturbance.\par
 At this point, some effectiveness of the proposed MDTSM control scheme has been verified, and in Section \ref{sec:robotica manipulator}, we will apply it to stabilize the behavior of a $2$-link robotic manipulator directly.
 \begin{figure}[http]
 \centering
@@ -604,7 +604,7 @@ where the main control parameters of which are selected as $\alpha = 0.6$, $\gam
 \caption{Joint torques}
 \label{Figure:torque}
 \end{figure}
-The performance of the controllers mentioned above is illustrated in Figure~\ref{Figure:4} and Figure~\ref{Figure:5}. \textcolor{red}{For the MDTSM controller, the joint~1 finishes its desired behaviour at about $2.3s$, and meanwhile the joint~2 spends about $1.7s$ completing the desired mission. Also, by observing the results, we can find that the stabilization time of the proposed method is less than the TSM controller's, and the regulating process of the manipulators is steady and reasonable. Through calculation, we can find the maximum theoretical finite convergence time $t_f=3.0843s$, which can be obtained directly according to Eq.~(\ref{eq:total convergence time}) and simulation data, is more than $2.3s$, the convergence time of the simulation result. Hence, we can conclude that the results have verified the analyses about the convergence time in Section~\ref{sec:2}.  The control torques of the joints are depicted in Figure~\ref{Figure:torque}. It is obvious that the torques of the two joints are both switching dramatically at the beginning, and this phenomenon is caused directly by the rapidly changing sliding mode dynamics $s_i$. Moreover, at about $1.7s$, all the joint states are regulated to locate in the vicinity of the origin, but the sliding mode dynamics do not yet enter the boundary layer $s_i< \delta$. This switching inputs last about $2.7s$ before reaching the boundary layer. After $2.7s$ boundary layer technique works to generate continuous torques, which maintain a reasonable constant in the subsequent time, since the overall system has been stable.} Therefore these results show that the MDTSM control scheme can achieve the regulation of the manipulator effectively.
+The performance of the controllers mentioned above is illustrated in Figure~\ref{Figure:4} and Figure~\ref{Figure:5}. \textcolor{red}{For the MDTSM controller, the joint~1 finishes its desired behavior at about $2.3s$, and meanwhile the joint~2 spends about $1.7s$ completing the desired mission. Also, by observing the results, we can find that the stabilization time of the proposed method is less than the TSM controller's, and the regulating process of the manipulators is steady and reasonable. Through calculation, we can find the maximum theoretical finite convergence time $t_f=3.0843s$, which can be obtained directly according to Eq.~(\ref{eq:total convergence time}) and simulation data, is more than $2.3s$, the convergence time of the simulation result. Hence, we can conclude that the results have verified the analyses about the convergence time in Section~\ref{sec:2}.  The control torques of the joints are depicted in Figure~\ref{Figure:torque}. It is obvious that the torques of the two joints are both switching dramatically at the beginning, and this phenomenon is caused directly by the rapidly changing sliding mode dynamics $s_i$. Moreover, at about $1.7s$, all the joint states are regulated to locate in the vicinity of the origin, but the sliding mode dynamics do not yet enter the boundary layer $s_i< \delta$. This switching inputs last about $2.7s$ before reaching the boundary layer. After $2.7s$ boundary layer technique works to generate continuous torques, which maintain a reasonable constant in the subsequent time, since the overall system has been stable.} Therefore these results show that the MDTSM control scheme can achieve the regulation of the manipulator effectively.
 
 \textcolor{red}{At this point, we have verified the feasibility of the MDTSM controller on step responses of the joints of the manipulator, and in most engineering applications, manipulators are required to track the variable desired signals, which own the actual physical meanings, such as polish, machine tools and laser beam cutting. Accordingly, the tracking performance of the robotic manipulator controlled by the proposed methods is studied in this section, and we continue to use the parameters of the controller mentioned above, and the mission condition is changed as follows:}
 \begin{align*}
